# featureScript

./: .gitattributes  .gitignore  CHANGELOG.md  KNOWN_LIMITATIONS.md  LICENSE.txt  LICENSE_POLICY.md  PORTFOLIO_REVIEW_GUIDE.md  README.md  README_START_HERE.md  RUN_INSTRUCTIONS.md  TEST_INSTRUCTIONS.md  launch_tributary_generator.bat  pyproject.toml
docs/: 000_DOCUMENTATION_INDEX.md  010_PRODUCT_REQUIREMENTS.md  020_FEATURE_INVENTORY.md  030_GEOMETRY_SPEC.md  040_MODULE_BOUNDARY_SPEC.md  080_ACCEPTANCE_TEST_PLAN.md  090_RISK_REGISTER.md  100_TECHNICAL_DEBT_REGISTER.md  110_REFACTOR_SEQUENCE_PLAN.md  120_DECISION_LOG.md  130_REVIEWER_ONBOARDING.md  140_LOCAL_VERIFICATION_REPORT.md  150_SYNTAX_AND_DEBUGGING_HISTORY.md  160_GUI_LAUNCHER_AND_PREVIEW.md  170_CFD_SCREENING_METRICS.md  180_RECOVERED_V1_UPDATE_REPORT.md
examples/: gui_demo_scenario.json  tributary_example_config.json
examples/generated_reference/: branch_pairing_table.csv  cfd_metrics_summary.txt  diagnostic_report.txt  onshape_variable_table.txt  tributary_layout.json
feature_scripts/: README.md  tributary_generator.fs
references/: README.md  recovered_tributary_v1_notes.md
reports/verification_run/: cfd_branch_metrics.csv  cfd_metrics.json  diagnostic_report.txt  tributary_branch_samples.csv
src/tributary_geometry/: README.md  __init__.py  bezier.py  cli.py  config.py  exporters.py  featurescript_export.py  gui_app.py  layout.py  metrics.py  vector2.py
tests/: smoke_test.py  test_geometry.py  test_gui_static.py
tools/: diagnostic_harness.py  structure_audit.py
