[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tributary-generator"
version = "0.3.0"
description = "Portfolio-ready Onshape FeatureScript tributary generator with Python geometry preview and live GUI explorer."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Scott Fackler" }]
dependencies = []  # GUI uses standard-library Tkinter; no runtime pip dependency required.

[project.scripts]
tributary-generator = "tributary_geometry.cli:main"
tributary-generator-gui = "tributary_geometry.gui_app:main"

[tool.setuptools.packages.find]
where = ["src"]
